--- a/.github/workflows/example.yml
+++ b/.github/workflows/example.yml
@@ -13,7 +13,7 @@ jobs:
 
     services:
       mysql:
-        image: mysql.5.7
+        image: mysql:5.7
     container:
       image: ruby:2.6.4
 
