--- a/.github/workflows/example.yml
+++ b/.github/workflows/example.yml
@@ -14,6 +14,9 @@ jobs:
     services:
       mysql:
         image: mysql:5.7
+        env:
+          MYSQL_USER: root
+          MYSQL_ALLOW_EMPTY_PASSWORD: yes
     container:
       image: ruby:2.6.4
       env:
