--- a/config/database.ci.yml
+++ b/config/database.ci.yml
@@ -4,7 +4,7 @@ default: &default
   charset: utf8mb4
   collation: utf8mb4_general_ci
   pool: 5
-  host: 127.0.0.1
+  host: mysql
   port: 3306
   username: root
   password:
