--- a/.github/workflows/example.yml
+++ b/.github/workflows/example.yml
@@ -51,5 +51,5 @@ jobs:
         run: cp -v config/database.ci.yml config/database.yml
       - name: db create
         run: bundle exec rails db:create db:schema:load --trace
-      - name: rspec
-        run: bundle exec rails rspec
+      # - name: rspec
+      #   run: bundle exec rspec
