--- a/.github/workflows/example.yml
+++ b/.github/workflows/example.yml
@@ -53,3 +53,9 @@ jobs:
         run: bundle exec rails db:create db:schema:load --trace
       - name: run rspec
         run: bundle exec rspec
+
+      - name: Archive rspec result screenshots
+        uses: actions/upload-artifact@v1
+        with:
+          name: rspec result screenshots
+          path: tmp/screenshots/
