--- a/.github/workflows/example.yml
+++ b/.github/workflows/example.yml
@@ -55,6 +55,7 @@ jobs:
         run: bundle exec rspec
 
       - name: Archive rspec result screenshots
+        if: always()
         uses: actions/upload-artifact@v1
         with:
           name: rspec result screenshots
