--- a/.github/workflows/example.yml
+++ b/.github/workflows/example.yml
@@ -54,9 +54,9 @@ jobs:
       - name: run rspec
         run: bundle exec rspec
 
-      # - name: Archive rspec result screenshots
-      #   if: always()
-      #   uses: actions/upload-artifact@v1
-      #   with:
-      #     name: rspec result screenshots
-      #     path: tmp/screenshots/
+      - name: Archive rspec result screenshots
+        if: failure()
+        uses: actions/upload-artifact@v1
+        with:
+          name: rspec result screenshots
+          path: tmp/screenshots/
