--- a/.github/workflows/example.yml
+++ b/.github/workflows/example.yml
@@ -29,12 +29,10 @@ jobs:
         with:
           path: node_modules
           key: yarn-${{ hashFiles('**/yarn.lock') }}
-      - name: Set up yarn and node
-        run: |
-          curl -sS https://dl.yarnpkg.com/debian/pubkey.gpg | apt-key add -
-          echo "deb https://dl.yarnpkg.com/debian/ stable main" | tee /etc/apt/sources.list.d/yarn.list
-          curl -sL https://deb.nodesource.com/setup_12.x | bash -
-          apt install -y yarn nodejs
+      - uses: actions/checkout@v1
+      - uses: borales/actions-yarn@v2.0.0
+        with:
+          cmd: install # will run `yarn install` command
       - name: Install chrome
         run: |
           wget -q -O - https://dl.google.com/linux/linux_signing_key.pub | apt-key add -
@@ -45,8 +43,7 @@ jobs:
         run: |
           gem install bundler
           bundle install --path vendor/bundle --quiet --jobs 4 --retry 3
-      - name: yarn install
-        run: yarn install
+      
       - name: set database.yml
         run: cp -v config/database.ci.yml config/database.yml
       - name: db create
