--- a/.github/workflows/example.yml
+++ b/.github/workflows/example.yml
@@ -29,9 +29,9 @@ jobs:
         with:
           path: node_modules
           key: yarn-${{ hashFiles('**/yarn.lock') }}
+      
       - uses: borales/actions-yarn@v2.0.0
-        with:
-          cmd: install # will run `yarn install` command
+        
       - name: Install chrome
         run: |
           wget -q -O - https://dl.google.com/linux/linux_signing_key.pub | apt-key add -
@@ -42,7 +42,8 @@ jobs:
         run: |
           gem install bundler
           bundle install --path vendor/bundle --quiet --jobs 4 --retry 3
-      
+      - name: yarn install
+        run: yarn install
       - name: set database.yml
         run: cp -v config/database.ci.yml config/database.yml
       - name: db create
